Added multiple testcase running asynchronously.
